--- a/hobbies.html
+++ b/hobbies.html
@@ -24,7 +24,7 @@
       <li>
         Learning new things💘
       </li>
-       <li>Listening to<a href="https://www.youtube.com/watch?v=cY7y1LTZPlU">Tonny Robbins</a></li>
+       <li>Watching the ever enriching<a href="https://www.youtube.com/@TEDxTalks">TEDxTalks</a></li>
     </<ol>
 
   </body>
